changes for state and country
