# server.js
@@ -2,6 +2,8 @@ const express = require('express');
 const logger = require('morgan');
 const movies = require('./routes/test') ;
 const users = require('./routes/user');
+const countries = require('./routes/country');
+const states = require('./routes/state');
 const bodyParser = require('body-parser');
 const mongoose = require('./config/database'); //database configuration
 var jwt = require('jsonwebtoken');
@@ -21,6 +23,8 @@ app.use('/user', users);
 app.use('/api-docs',swaggerUI.serve,swaggerUI.setup(swaggerDoc));
 // private route
 app.use('/test', validateUser, movies);
+app.use('/countries', countries);
+app.use('/states', states);
 
 app.use(function (req, res, next) {
   res.header("Content-Type",'application/json');
